Fixed div close tag

--- a/bio.html
+++ b/bio.html
@@ -7,10 +7,10 @@
 		<title> Biography </title>
 	</head>
 <body>
-<div>
+	<div>
 	<h1> Jason Scanlon </h1>
 	<h2> Always looking for an adventure </h2>
 	<p> Hi I'm Jason, and I am a proud member of the Class of 2020. I am from one of the smallest towns in the smallest state. I love basically every racket sport and that might be because I had the opportunity to play ping pong next to Justin Bieber (He is really good). In my free time, I like to browse through the archives of SNL videos, listen to my new favorite song a hundred times, and eat Italian food. I am also looking for new adventures but the more random the better, as you would probably expect considering what I do in my free time. What is more random than a Curling lesson right? Personality wise, I am pretty down to earth and it is not because of gravity. With my blogs, I hope that my stream of consciousness conveys why I love Tufts and possibly give helpful insight for the college application process. </p>
-<div>
+	</div>
 </body>
 <html>
